create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -411,6 +412,9 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
+#header1-c .mbr-section-title {
+  font-family: 'Raleway', sans-serif;
+}
 #ext_menu-0 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -471,10 +475,6 @@ h6,
 #ext_menu-0 .link[aria-expanded="true"],
 #ext_menu-0 .dropdown-item[aria-expanded="true"] {
   color: #3d8eb9!important;
-}
-#msg-box8-1 .mbr-section-title,
-#msg-box8-1 p {
-  color: #fff;
 }
 #msg-box8-9 .mbr-section-title,
 #msg-box8-9 p {
